# Asynchronous_Logging_System

./: .dockerignore  .env  CMakeLists.txt  LICENSE  LogMessage.hpp  LogQueue.hpp  Logger.hpp  README.md  ThreadPool.hpp  docker-compose.yml  log.html  main.cpp
Client/: CMakeLists.txt  Client.cpp  Client.hpp
EpollServer/: CMakeLists.txt  EpollServer.cpp  EpollServer.hpp  EpollServer.md  main.cpp
LogMessage/: AsyncLogBuffer.cpp  AsyncLogBuffer.hpp  LogMessage.cpp  LogMessage.hpp
MySQL/: SqlConnPool.cpp  SqlConnPool.hpp
Server/: AsyncDBWriter.cpp  AsyncDBWriter.hpp  CMakeLists.txt  Server.cpp  Server.hpp  main.cpp  pressure_test.sh  test_log_latency.cpp  test_log_throughput.cpp  test_resources.sh
Util/: ConfigManager.cpp  ConfigManager.hpp  Daemon.hpp  EnvConfig.cpp  EnvConfig.hpp  LogTemplates.cpp  LogTemplates.hpp  SessionManager.cpp  SessionManager.hpp  SharedConfigManager.cpp  SharedConfigManager.hpp  Sock.hpp
WebSocket/: CMakeLists.txt  WebSocket.cpp  WebSocket.hpp  WebSocketApiHandlers.cpp  WebSocketApiHandlers.hpp  WebSocketServer.cpp  dockerfile
static/: debug-detailed.html  debug-functions.html  index.html
static/css/: style.css
static/js/: main.js  websocket.js
tests/: CMakeLists.txt  generate_coverage.sh  run_tests.sh
tests/integration/: ServerClient_test.cpp  WebSocketComm_test.cpp
tests/mocks/: GlobalVariables.cpp  MockSqlConnPool.cpp
tests/performance/: HighLoad_test.cpp  MultiClient_test.cpp
tests/unit/: Client_test.cpp  EpollServer_test.cpp  SqlConnPool_test.cpp  WebSocket_test.cpp
